--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+# MovieApp/app/build/outputs/apk/debug/app-debug.apk filter=lfs diff=lfs merge=lfs -text
 MovieApp/app/build/outputs/apk/debug/app-debug.apk filter=lfs diff=lfs merge=lfs -text
